src/test/ui/assign-to-method.stderr
error[E0615]: attempted to take value of method `speak` on type `Cat`
  --> $DIR/assign-to-method.rs:20:8
   |
LL |   nyan.speak = || println!("meow");
   |        ^^^^^
   |
   = help: methods are immutable and cannot be assigned to

error[E0615]: attempted to take value of method `speak` on type `Cat`
  --> $DIR/assign-to-method.rs:21:8
   |
LL |   nyan.speak += || println!("meow");
   |        ^^^^^
   |
   = help: methods are immutable and cannot be assigned to

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0615`.
